--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-allprojects {
-    repositories {
-        mavenCentral()
-        jcenter()
-        google()
-    }
-}
-
 buildscript {
     repositories {
         mavenCentral()
@@ -14,7 +6,16 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-alpha06'
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+    }
+}
+
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
+        google()
     }
 }
 
